--- a/app/manifest.json
+++ b/app/manifest.json
@@ -24,11 +24,14 @@
 	},
 	"content_scripts": [
 		{
-		"matches": ["*://youtube.com/*", "*://*.youtube.com/*"],
+		"matches": ["*://youtube.com/watch*", "*://*.youtube.com/watch*"],
 		"js": ["scripts/constants.js", "scripts/modules/option-manager.js", "scripts/modules/liker-material.js", "scripts/modules/liker.js", "scripts/content.js"],
 		"run_at": "document_end"
 		}
 	],
+	"background": {
+		"scripts": ["scripts/background.js"]
+	},
 	"options_ui": {
 		"page": "options.html"
 	}
