--- a/app/manifest.json
+++ b/app/manifest.json
@@ -24,7 +24,7 @@
 	},
 	"content_scripts": [
 		{
-		"matches": ["*://youtube.com/watch*", "*://*.youtube.com/watch*"],
+		"matches": ["*://youtube.com/*", "*://*.youtube.com/*"],
 		"js": ["scripts/constants.js", "scripts/modules/option-manager.js", "scripts/modules/liker-material.js", "scripts/modules/liker.js", "scripts/content.js"],
 		"run_at": "document_end"
 		}
