--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": ">=0.8.0"
   },
   "devDependencies": {
+    "ava": "^0.22.0",
     "babel-core": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "del": "^2.2.0",
@@ -32,6 +33,12 @@
     "react-redux": "^5.0.5",
     "run-sequence": "^1.1.5",
     "wiredep": "^4.0.0"
+  },
+  "scripts": {
+    "test": "ava",
+    "test:watch": "ava --watch",
+    "start": "gulp watch",
+    "build": "gulp build"
   },
   "eslintConfig": {
     "env": {
