--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "__MSG_appName__",
-  "version": "2.0.3",
+  "version": "2.3.0",
   "manifest_version": 2,
   "description": "__MSG_appDesc__",
   "icons": {
@@ -11,7 +11,6 @@
   },
   "default_locale": "en",
   "permissions": [
-    "tabs",
     "storage"
   ],
   "browser_action": {
@@ -19,7 +18,7 @@
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
-    "default_title": "YouTube Auto Like",
+    "default_title": "__MSG_appName__",
     "default_popup": "options.html"
   },
   "content_scripts": [
