Revert "Remove background.js"
This reverts commit ad3058b7f0eaa1b9fb35dd22f5d9ba3a9e93b9f4.

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -29,6 +29,9 @@
 		"run_at": "document_end"
 		}
 	],
+	"background": {
+		"scripts": ["scripts/background.js"]
+	},
 	"options_ui": {
 		"page": "options.html"
 	}
