Brackground fix & Add patch note
Add a check that verifiy this is a plugin update and not a firefox update. Firefox update also trigger "onInstall".

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -30,7 +30,7 @@
 		}
 	],
 	"background": {
-		"scripts": ["scripts/background.js"]
+		"scripts": ["scripts/background.js", "scripts/modules/option-manager.js", "scripts/constants.js"]
 	},
 	"options_ui": {
 		"page": "options.html"
