That's not my repo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-auto-like",
-  "author": "Austen Morgan <heyausten@gmail.com> (https://github.com/Taknok)",
+  "author": "Austen Morgan <heyausten@gmail.com> (https://github.com/austencm)",
   "contributors": [
     "Taknok (https://github.com/Taknok)",
     "JKetelaar (https://github.com/JKetelaar)",
