--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "contributors": [
     "Taknok (https://github.com/Taknok)",
     "JKetelaar (https://github.com/JKetelaar)",
-    "Szmyk (https://github.com/Szmyk)"
+    "Szmyk (https://github.com/Szmyk)",
+    "moweME (http://github.com/moweME)"
   ],
   "repository": {
     "type" : "git",
