--- a/package.json
+++ b/package.json
@@ -1,65 +1,43 @@
 {
   "name": "youtube-auto-like",
+  "description": "Automatically like YouTube videos from your favorite content creators.",
   "author": "Austen Morgan <heyausten@gmail.com> (https://github.com/austencm)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/austencm/youtube-auto-like.git"
+  },
+  "keywords": [
+    "youtube",
+    "auto",
+    "automatic",
+    "like",
+    "chrome",
+    "browser",
+    "extension"
+  ],
   "contributors": [
     "Taknok (https://github.com/Taknok)",
     "JKetelaar (https://github.com/JKetelaar)",
     "Szmyk (https://github.com/Szmyk)",
-    "moweME (http://github.com/moweME)"
+    "moweME (https://github.com/moweME)",
+    "mariovalney (https://github.com/mariovalney)"
   ],
-  "repository": {
-    "type" : "git",
-    "url" : "https://github.com/austencm/youtube-auto-like.git"
-  },
-  "description": "Automatically like YouTube videos from your favorite content creators.",
-  "keywords": ["youtube", "auto", "automatic", "like", "chrome", "browser", "extension"],
-  "engines": {
-    "node": ">=0.8.0"
-  },
   "devDependencies": {
-    "babel-core": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-cache": "^0.4.3",
-    "gulp-chrome-manifest": "0.0.13",
-    "gulp-clean-css": "^2.0.3",
-    "gulp-eslint": "^2.0.0",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-pug": "^3.3.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-useref": "^3.0.8",
-    "gulp-zip": "^3.2.0",
-    "main-bower-files": "^2.11.1",
-    "run-sequence": "^1.1.5",
-    "wiredep": "^4.0.0"
+    "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "2.1.0",
+    "file-loader": "3.0.1",
+    "fs-extra": "7.0.1",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "style-loader": "^0.23.1",
+    "webpack": "4.28.4",
+    "webpack-dev-server": "3.1.14",
+    "write-file-webpack-plugin": "4.5.0",
+    "webpack-cli": "^3.2.1"
   },
   "scripts": {
-    "start": "gulp watch",
-    "build": "gulp build"
-  },
-  "eslintConfig": {
-    "env": {
-      "node": true,
-      "browser": true
-    },
-    "globals": {
-      "chrome": true
-    },
-    "rules": {
-      "eol-last": 0,
-      "quotes": [
-        2,
-        "single"
-      ]
-    }
+    "build": "node utils/build.js",
+    "start": "node utils/webserver.js"
   }
 }
