--- a/package.json
+++ b/package.json
@@ -27,17 +27,20 @@
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "2.1.0",
     "file-loader": "3.0.1",
+    "filemanager-webpack-plugin": "^2.0.5",
     "fs-extra": "7.0.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "4.28.4",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "3.1.14",
-    "write-file-webpack-plugin": "4.5.0",
-    "webpack-cli": "^3.2.1"
+    "webpack-merge": "^4.2.2",
+    "write-file-webpack-plugin": "4.5.0"
   },
   "scripts": {
     "build": "node utils/build.js",
     "start": "node utils/webserver.js"
-  }
+  },
+  "dependencies": {}
 }
