--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "write-file-webpack-plugin": "4.5.0"
   },
   "scripts": {
-    "build": "node utils/build.js",
-    "start": "node utils/webserver.js"
+    "build": "NODE_ENV=production node utils/build.js",
+    "start": " NODE_ENV=development DEBUG=true node utils/webserver.js"
   },
   "dependencies": {}
 }
