--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ["https://www.buymeacoffee.com/austen", "Buy my cats a snack"]
+custom: ["https://www.buymeacoffee.com/austen", Buy my cats a snack]
