--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "__MSG_appName__",
-	"version": "2.3.2",
+	"version": "2.3.3",
 	"manifest_version": 2,
 	"description": "__MSG_appDesc__",
 	"icons": {
@@ -11,7 +11,7 @@
 	},
 	"default_locale": "en",
 	"permissions": [
-		"tabs",
+		"activeTab",
 		"storage"
 	],
 	"browser_action": {
