--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,23 +1,21 @@
 {
   "name": "__MSG_appName__",
-  "version": "2.5.2",
-  "manifest_version": 2,
   "description": "__MSG_appDesc__",
   "homepage_url": "https://github.com/austencm/youtube-auto-like",
-  "icons": {
-    "16": "icon-16.png",
-    "32": "icon-32.png",
-    "48": "icon-48.png",
-    "128": "icon-128.png"
-  },
+  "version": "2.6.0",
+  "manifest_version": 3,
   "default_locale": "en",
-  "permissions": [
-    "storage"
-  ],
-  "browser_action": {
+  "minimum_chrome_version": "88",
+  "incognito": "split",
+  "permissions": ["storage"],
+  "icons": {
+    "128": "assets/images/128x128.png"
+  },
+  "action": {
     "default_icon": {
-      "19": "icon-19.png",
-      "38": "icon-38.png"
+      "16": "assets/images/16x16.png",
+      "32": "assets/images/32x32.png",
+      "48": "assets/images/48x48.png"
     },
     "default_title": "__MSG_appName__",
     "default_popup": "options.html"
@@ -25,13 +23,11 @@
   "content_scripts": [
     {
       "matches": ["*://youtube.com/*", "*://*.youtube.com/*"],
-      "js": ["content.bundle.js"],
+      "js": ["content.js"],
       "run_at": "document_end"
     }
   ],
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "options_ui": {
-    "page": "options.html",
-    "chrome_style": true
+    "page": "options.html"
   }
 }
