--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
   "default_locale": "en",
   "minimum_chrome_version": "88",
   "incognito": "split",
-  "permissions": ["storage"],
+  "permissions": ["storage", "notifications"],
   "icons": {
     "128": "assets/images/128x128.png"
   },
@@ -27,6 +27,9 @@
       "run_at": "document_end"
     }
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "options_ui": {
     "page": "options.html"
   }
