--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,13 +9,13 @@
   "incognito": "split",
   "permissions": ["storage", "notifications"],
   "icons": {
-    "128": "assets/images/128x128.png"
+    "128": "images/128x128.png"
   },
   "action": {
     "default_icon": {
-      "16": "assets/images/16x16.png",
-      "32": "assets/images/32x32.png",
-      "48": "assets/images/48x48.png"
+      "16": "images/16x16.png",
+      "32": "images/32x32.png",
+      "48": "images/48x48.png"
     },
     "default_title": "__MSG_appName__",
     "default_popup": "options.html"
@@ -23,12 +23,12 @@
   "content_scripts": [
     {
       "matches": ["*://youtube.com/*", "*://*.youtube.com/*"],
-      "js": ["content.js"],
+      "js": ["js/content.js"],
       "run_at": "document_end"
     }
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "js/background.js"
   },
   "options_ui": {
     "page": "options.html"
