--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "UtkuGARIP (https://github.com/UtkuGARIP)"
   ],
   "scripts": {
+    "postinstall": "npm run build",
     "start": "NODE_ENV=development webpack",
     "build": "NODE_ENV=production webpack"
   },
